--- a/app/views/dashboard/debts.html.slim
+++ b/app/views/dashboard/debts.html.slim
@@ -1,7 +1,7 @@
 header
   h1 Debts 
 
-.section-wide
+.section-wide.flex.flex-col.gap-8
   .table-card
     .search
       = render partial: "_shared/search-form", locals: {path: debts_path}
