--- a/app/assets/tailwind/fonts.css
+++ b/app/assets/tailwind/fonts.css
@@ -14,49 +14,10 @@
 
 @font-face {
   font-style: normal;
-  font-weight: 400;
-  font-stretch: 100%;
-  src: url("BricolageGrotesque-Regular.woff2") format("woff2");
+  font-weight: 200 800;
+  font-stretch: 75% 100%;
+  src: url("BricolageGrotesque-var.woff2") format("woff2");
   font-family: "Bricolage Grotesque";
   font-display: auto;
-}
-
-/* Medium */
-@font-face {
-  font-style: normal;
-  font-weight: 500;
-  font-stretch: 100%;
-  src: url("BricolageGrotesque-Medium.woff2") format("woff2");
-  font-family: "Bricolage Grotesque";
-  font-display: auto;
-}
-
-/* SemiBold */
-@font-face {
-  font-style: normal;
-  font-weight: 600;
-  font-stretch: 100%;
-  src: url("BricolageGrotesque-SemiBold.woff2") format("woff2");
-  font-family: "Bricolage Grotesque";
-  font-display: auto;
-}
-
-/* Bold */
-@font-face {
-  font-style: normal;
-  font-weight: 700;
-  font-stretch: 100%;
-  src: url("BricolageGrotesque-Bold.woff2") format("woff2");
-  font-family: "Bricolage Grotesque";
-  font-display: auto;
-}
-
-/* Black */
-@font-face {
-  font-style: normal;
-  font-weight: 900;
-  font-stretch: 100%;
-  src: url("BricolageGrotesque-ExtraBold.woff2") format("woff2");
-  font-family: "Bricolage Grotesque";
-  font-display: auto;
+  font-optical-sizing: auto;
 }
