--- a/app/views/products/_product_attributes.html.slim
+++ b/app/views/products/_product_attributes.html.slim
@@ -1,5 +1,5 @@
 .cards
-  = render "_shared/gallery", images: product.images
+  = render "_shared/gallery", media: product.media
 
   .card.grow
     h5 Title
