--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -235,6 +235,10 @@
     @apply text-red-700 dark:text-red-300 bg-red-100/60 dark:bg-red-900/50 hover:bg-red-200/60 dark:hover:bg-red-900/70;
   }
 
+  .btn-green {
+    @apply text-lime-700 dark:text-lime-300 bg-lime-200/50 dark:bg-lime-900/50 hover:bg-lime-200/90 dark:hover:bg-lime-900/80;
+  }
+
   .undo {
     @apply bg-transparent hover:bg-transparent hover:text-red-400!;
   }
@@ -426,5 +430,24 @@
 
   .progress-amount {
     @apply text-right leading-[1.1] px-1 font-black text-sm text-shadow-xs text-gray-100;
+  }
+
+  /* "Removed" overlay */
+  .rectangle-with-x {
+    @apply relative;
+  }
+
+  .rectangle-with-x::before,
+  .rectangle-with-x::after {
+    @apply absolute w-full h-2 bg-red-900 rounded-full top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-10;
+    content: '';
+  }
+
+  .rectangle-with-x::before {
+    @apply rotate-45;
+  }
+
+  .rectangle-with-x::after {
+    @apply -rotate-45;
   }
 }
