--- a/app/views/warehouses/_form.html.slim
+++ b/app/views/warehouses/_form.html.slim
@@ -1,8 +1,8 @@
-= form_with(model: warehouse) do |form|
+= form_with(model: warehouse, html: { multipart: true }) do |form|
   .block.w-full
     = form.label :name
     = form.text_field :name
-  
+
   fieldset.flex.justify-between.gap-4
     .block.w-full
       = form.label :external_name_en, "External Name in English"
@@ -26,7 +26,7 @@
     .block.w-full
       = form.label :position
       = form.select :position, options_for_select((1..positions_count).to_a, warehouse.position), {}, class: "form-select"
-    .block.w-full  
+    .block.w-full
       = form.label :is_default
       = form.select :is_default, options_for_select([["No", "0"], ["Yes", "1"]], warehouse.is_default? ? "1" : "0")
 
@@ -34,24 +34,11 @@
     .block.w-full
       = form.label :container_tracking_number
       = form.text_field :container_tracking_number
-    .block.w-full  
+    .block.w-full
       = form.label :courier_tracking_url
       = form.text_field :courier_tracking_url
 
-  - if warehouse.images.attached?
-    br
-    .card.flex.wrap.gap.even-pd.items-end
-      - warehouse.images.each do |image|
-        .form__img-card
-          = form.hidden_field :images, multiple: true, value: image.signed_id
-          = render "_shared/preloadable_img", src: image.representation(:thumb).url
-          = label_tag nil, class: "pd-2 pointer"
-            = check_box_tag "deleted_img_ids[]", image.id, class: "inline checkbox-remove"
-            | Remove image
-    br
-
-  = form.label :images 
-  = form.file_field :images, multiple: true
+  = render "_shared/media_form", form: form, resource_name: "warehouse"
 
   label Transition notifications
   p.text-gray-600.dark:text-gray-500.mb-6
@@ -61,7 +48,7 @@
       thead
         tr
           th Destination Warehouse
-          th 
+          th
       tbody
         - WarehouseTransition.where(from_warehouse: warehouse).includes(:to_warehouse).each do |transition|
           tr.no-select-margin
